<resources>
    <string name="app_name">CocktailApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">lilian@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Used by Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>

    <!--Used by Nav Drawer -->
    <string name="menu_home">Cocktails</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_favorites">Favorites</string>

    <!--Main fragment -->
    <string name="home_cocktailList">Cocktail List</string>
    <string name="clear_button">Clear</string>

    <!--Details fragment -->
    <string name="cocktail_saved_message">Cocktail saved in favorites</string>
    <string name="cocktail_deleted_successfully_from_favorites">The cocktail was removed from favorites</string>
    <string name="cocktail_already_saved_message">Cocktail is already saved in favorites</string>

    <!--Favorite fragment -->
    <string name="favorite_cocktailList_empty">You don´t have any drinks saved yet</string>
    <string name="favorite_cocktail_deleted_successfully">The cocktail was deleted</string>

    <!--Used by blind people  -->
    <string name="cocktail_details_image_content_descrip">Cocktail Details Image</string>
    <string name="no_connection_image">no Connection Image</string>
    <string name="image_grid_description">Cocktail Image in Grid View</string>
    <string name="listView_image_content_descrip">Cocktail Image in List View</string>

    <!--Used by view Model  -->
    <string name="drink_name">Drink name:</string>
    <string name="detailPriceTV">Price:</string>
    <string name="detailGlassTypeTV">Glass Type:</string>
    <string name="detailsInstructionsTV">Instructions:</string>
    <string name="detailsDate">Instructions were modified: %s</string>
    <string name="detailsPrice">$%s</string>
    <string name="ingredientsTV">Ingredients:</string>
    <string name="measure_and_ingredient">%s %s %s %s %s %s</string>
    <string name="next_measure_and_ingredient">%s %s</string>

    <!--Used by Preferences  -->
    <!-- Label for the cocktail type preference [CHAR LIMIT=30] -->
    <string name="pref_cocktail_type_label_title">Cocktail Category</string>
    <!-- Label for Cocktail option in Drink type preference [CHAR LIMIT=25] -->
    <!-- Key name for cocktail type preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_cocktail_category_key" translatable="false">cocktailType</string>

    <string name="pref_Cocktail_label_option">Cocktail</string>
    <!-- Label for Shot option in Drink type preference [CHAR LIMIT=25] -->
    <string name="pref_Shot_label_option">Shot</string>
    <!-- Label for non Alcoholic option in cocktail type preference [CHAR LIMIT=25] -->
    <string name="pref_Ordinary_Drink_label_option">Ordinary drink</string>
    <string name="pref_Homemade_label_option">Homemade liqueur</string>
    <string name="pref_Cocoa_label_option">Cocoa</string>

    <!-- Value in SharedPreferences for cocktail type option [CHAR LIMIT=NONE] -->
    <string name="pref_Cocktail_value" translatable="false">Cocktail</string>
    <!-- Value in SharedPreferences for Ordinary_Drink option [CHAR LIMIT=NONE] -->
    <string name="pref_Ordinary_Drink_value" translatable="false">Ordinary_Drink</string>
    <!-- Value in SharedPreferences for shot option [CHAR LIMIT=NONE] -->
    <string name="pref_Shot_value">Shot</string>
    <string name="pref_Homemade_value">Homemade Liqueur</string>
    <string name="pref_Cocoa_value">Cocoa</string>
    <string name="search_by_cocktail_name">Search by cocktail name</string>
    <string name="cleared_message">There are no cocktails matching your input</string>
    <!--Used by Preferences END -->

    <!-- Values to check internet connection and api call status -->
    <string name="check_your_internet_connection">Check your internet connection, the API call has fail</string>
    <string name="check_internet">Check you internet connection</string>
    <string name="api_call_failed">The API call has failed</string>

</resources>
