<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cocktail_details_container">

    <data>

        <variable
            name="cocktailDetailsVieModel"
            type="com.example.cocktailapp.ui.cocktailDetails.CocktailDetailsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="32dp">

            <ImageView
                android:id="@+id/cocktail_details_image"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:contentDescription="@string/cocktail_details_image_content_descrip"
                android:scaleType="fitXY"
                app:imageUrl="@{cocktailDetailsVieModel.cocktail.cocktailImgSrcUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/cocktail_details_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{cocktailDetailsVieModel.cocktail.cocktailName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detailsName"
                app:layout_constraintTop_toTopOf="@+id/detailsName"
                tools:text="Cosmopolitan" />

            <TextView
                android:id="@+id/cocktail_details_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{cocktailDetailsVieModel.priceFormatted}"
                app:layout_constraintEnd_toEndOf="@+id/cocktail_details_name"
                app:layout_constraintStart_toStartOf="@id/cocktail_details_name"
                app:layout_constraintTop_toBottomOf="@+id/cocktail_details_name"
                tools:text="$56" />

            <TextView
                android:id="@+id/cocktail_details_glass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{cocktailDetailsVieModel.cocktail.cocktailGlass}"
                app:layout_constraintEnd_toEndOf="@+id/cocktail_details_price"
                app:layout_constraintStart_toStartOf="@+id/cocktail_details_price"
                app:layout_constraintTop_toBottomOf="@+id/cocktail_details_price"
                tools:text="glass" />

            <TextView
                android:id="@+id/cocktail_details_instructions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{cocktailDetailsVieModel.cocktail.cocktailInstructions}"
                app:layout_constraintEnd_toEndOf="@+id/cocktail_details_glass"
                app:layout_constraintStart_toStartOf="@+id/detailsInstructions"
                app:layout_constraintTop_toBottomOf="@+id/detailsInstructions"
                tools:text="instructions description" />

            <TextView
                android:id="@+id/cocktail_details_date_modified"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@{cocktailDetailsVieModel.dateFormatted}"
                android:textAlignment="center"
                android:textStyle="italic"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cocktail_details_instructions"
                app:layout_constraintStart_toStartOf="@+id/cocktail_details_instructions"
                app:layout_constraintTop_toBottomOf="@+id/cocktail_details_ingredients"
                tools:text="2016-07-18" />

            <TextView
                android:id="@+id/detailsName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/drink_name"
                android:textStyle="bold"
                app:viewVisibility="@{cocktailDetailsVieModel.viewVisibility}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cocktail_details_image" />

            <TextView
                android:id="@+id/detailPriceTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/detailPriceTV"
                android:textStyle="bold"
                app:viewVisibility="@{cocktailDetailsVieModel.viewVisibility}"
                app:layout_constraintEnd_toStartOf="@+id/cocktail_details_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailsName" />

            <TextView
                android:id="@+id/detailsTypeGlassTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/detailGlassTypeTV"
                android:textStyle="bold"
                app:viewVisibility="@{cocktailDetailsVieModel.viewVisibility}"
                app:layout_constraintEnd_toStartOf="@+id/cocktail_details_glass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailPriceTV" />


            <TextView
                android:id="@+id/detailsInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/detailsInstructionsTV"
                android:textAlignment="center"
                android:textStyle="bold"
                app:viewVisibility="@{cocktailDetailsVieModel.viewVisibility}"
                app:layout_constraintStart_toStartOf="@+id/detailsTypeGlassTV"
                app:layout_constraintTop_toBottomOf="@+id/detailsTypeGlassTV" />

            <TextView
                android:id="@+id/ingredientsTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ingredientsTV"
                android:textStyle="bold"
                app:viewVisibility="@{cocktailDetailsVieModel.viewVisibility}"
                app:layout_constraintStart_toStartOf="@+id/cocktail_details_instructions"
                app:layout_constraintTop_toBottomOf="@id/cocktail_details_instructions" />

            <TextView
                android:id="@+id/cocktail_details_ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{cocktailDetailsVieModel.ingredientsAndMeasure}"
                app:layout_constraintEnd_toEndOf="@+id/cocktail_details_instructions"
                app:layout_constraintStart_toStartOf="@+id/ingredientsTV"
                app:layout_constraintTop_toBottomOf="@+id/ingredientsTV"
                tools:text="Creme de Cacao - 1 oz white" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:apiStatus="@{cocktailDetailsVieModel.loadingStatus}"
                app:internetStatus="@{cocktailDetailsVieModel.internetStatus}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.476"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.775">

                <ImageView
                    android:id="@+id/noConnectionImg"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/no_connection_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:src="@drawable/ic_signal_cellular_null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    tools:text="@string/check_internet"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>